# toml-adapt

./: .all-contributorsrc  .readthedocs.yml  AUTHORS.rst  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  toml-adapt.1
.github/workflows/: python-app.yml
docs/: conf.py  index.rst  requirements.txt
docs/dev/: installation.rst
docs/user/: getting_started.rst
examples/: Cargo.toml  flit_pyproject.toml  poetry_pyproject.toml  pyproject.toml
testfile/: pyproject.toml
tests/: test_toml_adapt.py
toml_adapt/: AllShapes.py  CargoActions.py  ChangeLine.py  Common.py  DocumentOperations.py  DocumentType.py  FlitActions.py  JuliaActions.py  ManipulateToml.py  Match.py  PoetryActions.py  Shape.py  ToolExtraction.py  __init__.py  main.py
toml_adapt/ToolExtraction/: ToolExtraction.py
toml_adapt/tests/: test_toml.py  test_toml_adapt.py  test_version_change.py
toml_adapt/tests/data/: pyproject.toml  pyproject2.toml  requirements.txt
