[tool.poetry]
name = "toml-adapt"
version = "0.2.10"
description = "A simple command-line interface for manipulating toml files"
license = "MIT"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>","Filip Strajnar <filip.strajnar@gmail.com>"]
keywords = ['adaptation', 'data manipulation', 'flit', 'poetry', 'toml']
homepage = "https://github.com/firefly-cpp/toml-adapt"
repository = "https://github.com/firefly-cpp/toml-adapt"
include = [ { path = "toml-adapt.1", format = "sdist" } ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
toml = "*"
click = "*"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
toml-adapt = "toml_adapt.main:TomlAdapt"
